WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112925
[GStreamer] Memory leak in AudioFileReader::createBus()
https://bugs.webkit.org/show_bug.cgi?id=112925
Summary
[GStreamer] Memory leak in AudioFileReader::createBus()
Sudarsana Nagineni (babu)
Reported
2013-03-21 09:34:59 PDT
Noticed the following leak while running MiniBrowser under valgrind. The source returned by g_timeout_source_new() must be freed to fix this leak. ==16369== 10,304 bytes in 92 blocks are definitely lost in loss record 14,493 of 14,765 ==16369== at 0x4C29DB4: calloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==16369== by 0xD5394C0: g_malloc0 (gmem.c:189) ==16369== by 0xD5319D4: g_source_new (gmain.c:793) ==16369== by 0xD5345C0: g_timeout_source_new (gmain.c:3908) ==16369== by 0x9F0721A: WebCore::AudioFileReader::createBus(float, bool) (AudioFileReaderGStreamer.cpp:464) ==16369== by 0x9F074C0: WebCore::createBusFromInMemoryAudioFile(void const*, unsigned long, bool, float) (AudioFileReaderGStreamer.cpp:492) ==16369== by 0x89D5435: WebCore::AudioBuffer::createFromAudioFileData(void const*, unsigned long, bool, float) (AudioBuffer.cpp:53) ==16369== by 0x89DBF30: WebCore::AudioContext::createBuffer(WTF::ArrayBuffer*, bool, int&) (AudioContext.cpp:328) ==16369== by 0x9A87F8E: WebCore::jsAudioContextPrototypeFunctionCreateBuffer2(JSC::ExecState*) (JSAudioContext.cpp:362) ==16369== by 0x9A880A9: WebCore::jsAudioContextPrototypeFunctionCreateBuffer(JSC::ExecState*) (JSAudioContext.cpp:374)
Attachments
Patch
(1.87 KB, patch)
2013-03-21 23:46 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2013-03-21 23:46:36 PDT
Created
attachment 194457
[details]
Patch
WebKit Review Bot
Comment 2
2013-03-22 01:10:03 PDT
Comment on
attachment 194457
[details]
Patch Clearing flags on attachment: 194457 Committed
r146571
: <
http://trac.webkit.org/changeset/146571
>
WebKit Review Bot
Comment 3
2013-03-22 01:10:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug