[GStreamer] Memory leak in AudioFileReader::createBus() https://bugs.webkit.org/show_bug.cgi?id=112925

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2013-03-22
Reviewed by Martin Robinson.

Adopt the reference returned by g_timeout_source_new()
to fix a memory leak.

No new tests. No change in behavior.

* platform/audio/gstreamer/AudioFileReaderGStreamer.cpp:
(WebCore::AudioFileReader::createBus):

Canonical link: https://commits.webkit.org/131352@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146571 268f45cc-cd09-0410-ab3c-d52691b4dbfc